--- a/SLBr/Pages/FavouritesPage.xaml
+++ b/SLBr/Pages/FavouritesPage.xaml
@@ -82,21 +82,33 @@
                                         </Setter.Value>
                                     </Setter>
                                 </Style>
-                            </ListBox.Resources>
-                            <ListBox.ItemTemplate>
-                                <DataTemplate>
+                                <DataTemplate x:Key="UrlTemplate">
                                     <Border Width="Auto" HorizontalAlignment="Stretch">
                                         <DockPanel Margin="5">
                                             <Button DockPanel.Dock="Right" Click="DeleteSingleButton_Click" ToolTip="Remove" Content="&#xe711;" Margin="0" Style="{StaticResource IconButton}"/>
-                                            <Button DockPanel.Dock="Right" MouseUp="FavouriteButton_MouseUp" Content="&#xe8a7;" ToolTip="Open" Margin="0,0,5,0" Style="{StaticResource IconButton}"/>
                                             <Button DockPanel.Dock="Right" Click="EditButton_Click" Content="&#xe70f;" ToolTip="Edit" Margin="0,0,5,0" Style="{StaticResource IconButton}"/>
+                                            <Button DockPanel.Dock="Right" PreviewMouseUp="FavouriteButton_PreviewMouseUp" Content="&#xe8a7;" ToolTip="Open" Margin="0,0,5,0" Style="{StaticResource IconButton}"/>
                                             <TextBlock Margin="0,0,5,0" DockPanel.Dock="Left" Width="35" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="20" Text="&#xeb41;"/>
                                             <TextBlock Margin="0,0,5,0" Width="Auto" VerticalAlignment="Center" DockPanel.Dock="Left" Text="{Binding Name}" HorizontalAlignment="Stretch"/>
                                             <TextBlock Margin="0,0,5,0" FontSize="10" Foreground="{StaticResource GrayBrush}" VerticalAlignment="Center" Text="{Binding Url}" HorizontalAlignment="Stretch" Width="Auto"/>
                                         </DockPanel>
                                     </Border>
                                 </DataTemplate>
-                            </ListBox.ItemTemplate>
+                                <DataTemplate x:Key="FolderTemplate">
+                                    <Border Width="Auto" HorizontalAlignment="Stretch">
+                                        <DockPanel Margin="5">
+                                            <Button DockPanel.Dock="Right" Click="DeleteSingleButton_Click" ToolTip="Remove" Content="&#xe711;" Margin="0" Style="{StaticResource IconButton}"/>
+                                            <Button DockPanel.Dock="Right" Click="EditButton_Click" Content="&#xe70f;" ToolTip="Edit" Margin="0,0,5,0" Style="{StaticResource IconButton}"/>
+                                            <TextBlock Margin="0,0,5,0" DockPanel.Dock="Left" Width="35" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{StaticResource IconFontFamily}" TextAlignment="Center" FontSize="20" Text="&#xe8b7;"/>
+                                            <TextBlock Margin="0,0,5,0" Width="Auto" VerticalAlignment="Center" DockPanel.Dock="Left" Text="{Binding Name}" HorizontalAlignment="Stretch"/>
+                                            <TextBlock Margin="0,0,5,0" FontSize="10" Foreground="{StaticResource GrayBrush}" VerticalAlignment="Center" Text="{Binding Url}" HorizontalAlignment="Stretch" Width="Auto"/>
+                                        </DockPanel>
+                                    </Border>
+                                </DataTemplate>
+                            </ListBox.Resources>
+                            <ListBox.ItemTemplateSelector>
+                                <controls:FavouriteTemplateSelector UrlTemplate="{StaticResource UrlTemplate}" FolderTemplate="{StaticResource FolderTemplate}"/>
+                            </ListBox.ItemTemplateSelector>
                         </ListBox>
                     </StackPanel>
                 </ScrollViewer>
